# Mutual-Fund-Guide

./: .env  .vercelignore  DEPLOYMENT.md  Dockerfile  MF - Rupam.xlsx  Pipfile  README.md  app.py  build_files.sh  data_fetcher.py  env_example.txt  llm_recommender.py  mutual_fund_analyzer.py  pyproject.toml  requirements-prod.txt  requirements.txt  runtime.txt  show_top_funds.py  test_app.py  test_chart.html  test_new_features.py  test_script.py  vercel-build  vercel-build.sh  vercel.json  wsgi.py
api/: index.py
templates/: index.html
