[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutual-fund-analyzer"
version = "1.0.0"
description = "Mutual Fund Analysis and Recommendation System"
requires-python = ">=3.8,<3.14"
dependencies = [
    "flask==3.0.0",
    "requests==2.31.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "google-generativeai==0.3.2",
    "python-dotenv==1.0.0",
    "beautifulsoup4==4.12.2",
    "lxml==5.1.0",
    "yfinance==0.2.28",
    "plotly==5.18.0",
    "dash==2.16.1",
    "dash-bootstrap-components==1.5.0"
]

[tool.setuptools]
packages = ["app", "mutual_fund_analyzer", "llm_recommender"]
